# PaiNaiDee_Backend

./: .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  ADMIN_VIDEO_SYSTEM.md  API_DOCUMENTATION.md  API_TEST_RESULTS.md  BACKEND_PHASE1_README.md  CODESPACES_SETUP.md  COMMUNITY_POSTS_README.md  DASHBOARD_README.md  Dockerfile  EXTERNAL_DATA_README.md  FRONTEND_CONNECTIVITY.md  FRONTEND_ERROR_HANDLING.md  FUZZY_SEARCH_README.md  LICENSE  MIGRATION_NOTES.md  PLACE_DETAILS_README.md  PaiNaiDee_Colab_Deploy.ipynb  README.md  README_spaces.md  REVIEW_SYSTEM.md  TALK_API_README.md  alembic.ini  app.json  app.py  attractions_cleaned_from_api.json  attractions_cleaned_ready.json  check_db_encoding.py  cleanup.py  comprehensive_demo.py  config.yaml.example  dashboard_example.py  database.py  demo_community_posts.py  demo_community_posts_mock.py  demo_phase1.py  demo_search.py  (+31 more)
.devcontainer/: devcontainer.json
.github/workflows/: backend.yml
api/: search.py
app/: __init__.py  config.py  errors.py  extensions.py  main.py
app/api/: error_handlers.py  routes_engagement.py  routes_locations.py  routes_posts.py  routes_search.py
app/auth/: security.py
app/blueprints/: __init__.py
app/blueprints/api/: attractions.py  auth.py  booking.py  dashboard.py  external_data.py  reviews.py  search.py  talk.py  videos.py
app/core/: config.py  exceptions.py  logging.py
app/db/: models.py  seeding.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 001_phase1_models.py  002_add_engagement.py  42cd6ad83f29_set_empty_json_for_null_image_urls.py  7c6b83ddd731_add_engagement_tables_and_constraints.py  8d0e51c829d4_add_source_and_timestamp_fields_to_.py
app/models/: __init__.py  api_analytics.py  attraction.py  car_rental.py  external_data.py  json_encoded_dict.py  review.py  room_booking.py  user.py  video_post.py
app/schemas/: analytics.py  auth.py  booking.py  engagement.py  locations.py  posts.py  search.py  talk.py  video.py
app/services/: analytics_service.py  attraction_service.py  auth_service.py  booking_service.py  engagement_service.py  location_service.py  post_service.py  review_service.py  search_service.py  storage_service.py  talk_service.py  video_service.py
app/utils/: analytics_middleware.py  expansion_loader.py  ranking.py  text_normalization.py  text_normalize.py
data/: keyword_mapping.json
data_pipeline/: README.md  run_pipeline.py
data_pipeline/data/: mock_attractions.json
data_pipeline/sources/: mock_source.py
docs/: API_PHASE1.md
fresh_venv/: pyvenv.cfg
instance/: scheduled_updates.json  test.db
migrations/versions/: 001_initial_tables.py  002_search_indexes.py
openapi/: contextual-search.yaml
seed/: keyword_expansion.json
src/: app.py  config.py  database.py  errors.py  models.py  utils.py
src/models/: __init__.py  api_analytics.py  attraction.py  car_rental.py  external_data.py  json_encoded_dict.py  place_detail.py  post.py  project.py  review.py  room.py  room_booking.py  task.py  user.py  video_post.py
src/routes/: admin_videos.py  attractions.py  auth.py  booking.py  dashboard.py  external_data.py  locations.py  places.py  posts.py  predict.py  reviews.py  rooms.py  search.py  talk.py  users.py  videos.py
src/schemas/: analytics.py  attraction.py  auth.py  place_detail.py  talk.py  video.py
src/services/: analytics_service.py  attraction_service.py  auth_service.py  booking_service.py  data_update_scheduler.py  external_data_service.py  place_detail_service.py  post_service.py  review_service.py  room_service.py  search_service.py  storage_service.py  talk_service.py  user_service.py  video_service.py
src/utils/: analytics_middleware.py
src_backup/: app.py  database.py
src_backup/models/: __init__.py  car.py  car_rental.py  external_data.py  review.py  user.py
src_backup/routes/: attractions.py  auth.py
src_backup/schemas/: review.py  talk.py
src_backup/services/: review_service.py  video_service.py
src_backup/utils/: response.py
test_env/: pyvenv.cfg
test_fix_venv/: pyvenv.cfg
test_run/: pyvenv.cfg
test_venv/: pyvenv.cfg
tests/: conftest.py  run_all_tests.py  test_admin_videos.py  test_all_apis.ipynb  test_analytics_service.py  test_app.py  test_attraction_service.py  test_auth.py  test_comprehensive_phase1.py  test_dashboard.py  test_docker_compose.py  test_engagement.py  test_engagement_api.py  test_expansion_loader.py  test_external_data.py  test_frontend_connectivity.py  test_health_checks.py  test_locations.py  test_phase1_endpoints.py  test_places.py  test_posts_api.py  test_ranking.py  test_reviews.py  test_rooms_api.py  test_schemas.py  test_search.py  test_services.py  test_talk.py  test_text_normalize.py  test_video_service.py  test_videos.py
uploads/videos/: .gitkeep
